# twilight-struggle-ppo

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
bridge/: saito_bridge.js
config/rulesets/: optional_us_plus_2.json
docs/: ppo_model_report.md  ruleset.md  warmup_data_format.md  warmup_direct_sample_schema.json  warmup_ids.md
examples/warmup/: manifest.json  sample_warmup_games.jsonl
scripts/: audit_saito_bridge_stages.py  convert_game_log_to_direct_warmup.py  convert_turn_text_to_warmup_with_codex.py  convert_turn_text_to_warmup_with_codex_batch.py  fetch_saito.sh  format_game_log.py  generate_policy_distill_warmup.py  launch_unified_distill_defconfilter5_then_ppo_gpu2.sh  launch_unified_distill_then_ppo_gpu2.sh  launch_unified_history1024_handmask_warmup_then_ppo_gpu2.sh  launch_unified_mix_explore_gpu2.sh  launch_unified_noforcesetup_coolshape_gpu1.sh  launch_unified_noforcesetup_coolshape_lowmem_gpu1.sh  rank_ppo_checkpoints.py  run_multiagent_us7003_currentussr_nuke02_100k.sh  run_us_sharpen_stage1.sh  select_ranked_policies.py  summarize_elo.py  summarize_ppo_run.py  watch_ppo_run.py  watch_unified_mix_explore.sh
struggle_ai/: __init__.py  baseline_policies.py  bridge_client.py  env.py  eval_rllib.py  features.py  league.py  log_format.py  play.py  policies.py  rllib_masked_model.py  train_rllib.py  warmup_bc.py
tests/: test_bridge.py  test_env.py  test_eval_elo.py  test_league_plan.py  test_policies.py  test_summarize_elo.py
warmup_data/: manifest.json
warmup_data_retry1/: manifest.json
(+69 files in other folders)
